# cuda_blackboard

./: CMakeLists.txt  README.md  package.xml
include/cuda_blackboard/: cuda_adaptation.hpp  cuda_blackboard.hpp  cuda_blackboard_publisher.hpp  cuda_blackboard_subscriber.hpp  cuda_image.hpp  cuda_pointcloud2.hpp  cuda_unique_ptr.hpp  negotiated_types.hpp
launch/: example.launch.py
src/: cuda_blackboard.cpp  cuda_blackboard_publisher.cpp  cuda_blackboard_publisher_node.cpp  cuda_blackboard_subscriber.cpp  cuda_blackboard_subscriber_node.cpp  cuda_image.cpp  cuda_pointcloud2.cpp
